test/semantic_errors/invalid_binaryop8.mc
void main() {
    int res;
    int a;
    bool b;
    res = a - b;
}